--- a/main.html
+++ b/main.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <div class="imageContainer">
+            <img src="image1.jpg" alt="Image 1">
+        </div>
+        <table>
+            <tr>
+                <td class="col1"><img src="image2.jpg" alt="Image 2"></td>
+                <td class="col2">
+                    <p>This is the text content for row 1, column 2.</p>
+                </td>
+                <td class="col3"><img src="image3.jpg" alt="Image 3"></td>
+            </tr>
+            <tr>
+                <td class="col1"><img src="image4.jpg" alt="Image 4"></td>
+                <td class="col2">
+                    <p>This is the text content for row 2, column 2.</p>
+                </td>
+                <td class="col3"><img src="image5.jpg" alt="Image 5"></td>
+            </tr>
+        </table>
+       
+    </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
