--- a/main.html
+++ b/main.html
@@ -26,7 +26,9 @@
                 <td class="col3"><img src="image5.jpg" alt="Image 5"></td>
             </tr>
         </table>
-       
+        <div class="imageContainer">
+            <img src="image6.jpg" alt="Image 6">
+        </div>
     </div>
 
     <script src="script.js"></script>
